--- a/style/style.css
+++ b/style/style.css
@@ -184,14 +184,14 @@ textarea:invalid::-webkit-input-placeholder,
 }
 
 .serch-left::placeholder {
-  background: url(img/Vector.svg);
+  background: url(../img/Vector.svg);
   background-repeat: no-repeat;
   padding: 0 0 0 25px;
   opacity: 0.5;
 }
 
 .serch-right::placeholder {
-  background: url(img/Vector-right.svg);
+  background: url(../img/Vector-right.svg);
   background-repeat: no-repeat;
   background-position: 100%;
   opacity: 0.5;
@@ -270,7 +270,7 @@ textarea:invalid::-webkit-input-placeholder,
 .option-checkbox:checked+label::before {
   border-color: #0b76ef;
   background-color: #0b76ef;
-  background-image: url(img/check-mark.svg);
+  background-image: url(../img/check-mark.svg);
 }
 
 .radio-checkbox:checked+label::before {
@@ -366,4 +366,49 @@ input:disabled+.tumbler__btn {
 input:disabled+.tumbler__btn:before {
   background: #ffffff;
   border: 1px solid #ffffff;
+}
+
+/* custom slider */
+.form__bar {
+  margin: 48px 0;
+}
+
+.noUi-tooltip {
+  display: none;
+}
+
+.noUi-connect {
+  background: #18A0FB;
+}
+
+.form__bar>.noUi-horizontal {
+  height: 4px;
+  border: none;
+  border-radius: 10px;
+}
+
+.form__bar>.noUi-horizontal .noUi-handle {
+  width: 15px;
+  height: 15px;
+  left: -17px;
+  top: -6px;
+  border-radius: 50%;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.04);
+}
+
+.noUi-handle:after,
+.noUi-handle:before {
+  display: none;
+}
+
+.noUi-target {
+  background: #E0E0E0;
+  box-shadow: none;
+}
+
+html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
+  right: -14px;
+  left: auto;
 }
