--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ body {
   scroll-behavior: smooth;
   font-family: 'Inter', sans-serif;
   font-size: 13px;
+  color: #2c2c2c;
 }
 
 h1,
@@ -28,6 +29,10 @@ input {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
+  cursor: pointer;
+  outline: none;
+  outline-offset: inherit;
+  -webkit-appearance: none;
 }
 
 body {
@@ -461,6 +466,7 @@ h2 {
 .button--blue,
 .button--light:hover {
   background: #18A0FB;
+  border: 1px solid #18A0FB;
   color: #ffffff;
   stroke: #ffffff;
 }
@@ -1072,4 +1078,200 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 
 .hidden {
   display: none;
+}
+
+/* alert */
+
+.alert__group {
+  margin-top: 40px;
+  margin-right: 3%;
+  width: 313px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+}
+
+.alert__item {
+  /* height: 70px; */
+  margin-bottom: 20px;
+  box-shadow: 0px 10px 23px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 13px;
+  position: relative;
+}
+
+.alert-title {
+  size: 13px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.alert__close,
+.alert__alarm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #ffffff;
+  font-size: 13px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.alert__wrap {
+  flex-direction: row;
+}
+
+.alert__close {
+  background: rgba(224, 224, 224, 1);
+}
+
+.alert__alarm {
+  position: relative;
+  top: 0;
+  left: 0;
+  color: #000000;
+  font-weight: 700;
+}
+
+.alert--light {
+  border: 1px solid rgba(224, 224, 224, 0.15);
+}
+
+.alert--light>.alert__alarm {
+  background: #FF3E1D;
+}
+
+.alert__close>svg {
+  fill: #ffffff;
+}
+
+.alert--blue {
+  background-color: #18A0FB;
+  color: #ffffff;
+}
+
+.alert--red {
+  background: #FF3E1D;
+  color: #ffffff;
+}
+
+.alert--blue>.alert__close {
+  background-color: #ffffff;
+}
+
+.alert--blue>.alert__close>svg {
+  fill: #18A0FB;
+}
+
+.alert-disabled {
+  opacity: 0.5;
+}
+
+.alert__text {
+  flex-grow: 1;
+  padding-left: 10px;
+  padding-right: 25px;
+}
+
+.alert__link {
+  position: absolute;
+  height: 100%;
+  max-width: 30%;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-left: 1px solid #E0E0E0;
+}
+
+.alert__link>a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  color: inherit;
+  height: 50%;
+}
+
+.alert__open {
+  border-bottom: 1px solid #E0E0E0;
+  font-weight: 700;
+}
+
+.alert--red>.alert__link,
+.alert--red>.alert__link>.alert__open {
+  border-color: #ffffff;
+}
+
+.alert__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  width: 658px;
+  height: 296px;
+  position: relative;
+}
+
+.overlay {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  width: 100%;
+  height: 100%;
+  background-color: rgba(44, 44, 44, 0.2);
+}
+
+.modal__wrapper {
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  width: 50%;
+  height: 50%;
+  overflow: auto;
+  margin: auto;
+  /* transform: translate(50%); */
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  padding: 16px;
+  width: 313px;
+  max-width: 100%;
+  min-height: 134px;
+  background: #FFFFFF;
+  border: 1px solid rgba(224, 224, 224, 0.15);
+  box-shadow: 0px 10px 23px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.modal__text {
+  margin-bottom: 24px;
+}
+
+.modal__buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal__buttons>input {
+  margin-left: 4px;
+  margin-right: 0;
+  margin-bottom: 0;
+  padding: 10px 14px;
 }
