--- a/style/style.css
+++ b/style/style.css
@@ -286,8 +286,8 @@ textarea:invalid::-webkit-input-placeholder,
 .radio-checkbox+label::before {
   content: '';
   display: inline-block;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   flex-shrink: 0;
   flex-grow: 0;
   border: 1px solid #E0E0E0;
@@ -307,25 +307,25 @@ textarea:invalid::-webkit-input-placeholder,
 }
 
 .option-checkbox:checked+label::before {
-  border-color: #0b76ef;
-  background-color: #0b76ef;
+  border-color: #18A0FB;
+  background-color: #18A0FB;
   background-image: url(../img/check-mark.svg);
 }
 
 th .option-checkbox+label::before {
-  border-color: #0b76ef;
-  background-color: #0b76ef;
+  border-color: #18A0FB;
+  background-color: #18A0FB;
   background-image: url(../img/unchecked.svg)
 }
 
 
 .radio-checkbox:checked+label::before {
-  border: 6px solid #0b76ef;
+  border: 6px solid #18A0FB;
 }
 
 .option-checkbox:not(:disabled):not(:checked)+label:hover::before,
 .radio-checkbox:not(:disabled):not(:checked)+label:hover::before {
-  border-color: #0b76ef;
+  border-color: #18A0FB;
 }
 
 .option-checkbox:disabled+label::before,
@@ -848,7 +848,7 @@ ul.breadcrumbs li::after {
 }
 
 .handler__drop .noUi-handle::before {
-  content:'';
+  content: '';
   display: block;
   border: none;
   background-color: #18A0FB;
@@ -976,6 +976,10 @@ html:not([dir=rtl]) .handler__drop .noUi-handle {
   background-color: currentColor;
 }
 
+.multisteps-form__progress-bg {
+  margin-bottom: 60px;
+}
+
 .multisteps-form__progress-bg button.js-active:before {
   -webkit-transform: translateX(-50%) scale(1.2);
   transform: translateX(-50%) scale(1.2);
@@ -986,8 +990,8 @@ html:not([dir=rtl]) .handler__drop .noUi-handle {
 
 .form__vertical {
   position: absolute;
-  top: 155px;
-  left: -198px;
+  bottom: 0px;
+  right: -80px;
   transform: rotate(90deg);
   width: 363px;
 }
@@ -1601,10 +1605,11 @@ progress::-webkit-progress-value {
 /* Tables */
 
 .table__wrap {
-  display:inline-block;
-  width: 100%;
-  border:1px solid #E0E0E0;
-  border-radius:5px;
+  display: inline-block;
+  width: 805px;
+  max-width: 100%;
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
   margin-bottom: 77px;
 }
 
@@ -1622,7 +1627,7 @@ table {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -khtml-border-radius: 5px;
-  overflow:hidden;
+  overflow: hidden;
   /* display: block; */
 }
 
@@ -1649,7 +1654,7 @@ tbody tr:nth-last-child(1) {
   opacity: 0.5;
 }
 
-.table__wrap td:nth-last-child(1){
+.table__wrap td:nth-last-child(1) {
   padding-right: 22px;
   text-align: right;
 }
@@ -1667,7 +1672,9 @@ tbody>tr:hover {
 
 .table__title {
   display: flex;
-  width: 100%;
+  flex-wrap: wrap;
+  width: 805px;
+  max-width: 100%;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
@@ -1675,4 +1682,140 @@ tbody>tr:hover {
 
 .table__title h2 {
   margin: 0;
+}
+
+/* calendar */
+
+
+.flatpickr-input {
+  display: none;
+}
+
+.flatpickr-months .flatpickr-month {
+  height: 38px;
+  background-color: #e7f5ff;
+  color: #2C2C2C;
+
+  border-radius: 5px;
+  margin: 12px 14px;
+}
+
+.flatpickr-current-month {
+  display: flex;
+  justify-content: center;
+
+}
+
+.flatpickr-current-month .flatpickr-monthDropdown-months {
+  order: 1;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  color: #2C2C2C;
+}
+
+.flatpickr-months .flatpickr-prev-month,
+.flatpickr-months .flatpickr-next-month {
+  top: 10px;
+}
+
+.flatpickr-months .flatpickr-prev-month.flatpickr-prev-month,
+.flatpickr-months .flatpickr-next-month.flatpickr-prev-month {
+  left: 15px;
+}
+
+.flatpickr-months .flatpickr-prev-month.flatpickr-next-month,
+.flatpickr-months .flatpickr-next-month.flatpickr-next-month {
+  right: 15px;
+}
+
+.flatpickr-day,
+span.flatpickr-weekday {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  color: #2C2C2C;
+}
+
+span.flatpickr-weekday {
+  font-size: 108%;
+}
+
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange,
+.flatpickr-day.selected.inRange,
+.flatpickr-day.startRange.inRange,
+.flatpickr-day.endRange.inRange,
+.flatpickr-day.selected:focus,
+.flatpickr-day.startRange:focus,
+.flatpickr-day.endRange:focus,
+.flatpickr-day.selected:hover,
+.flatpickr-day.startRange:hover,
+.flatpickr-day.endRange:hover,
+.flatpickr-day.selected.prevMonthDay,
+.flatpickr-day.startRange.prevMonthDay,
+.flatpickr-day.endRange.prevMonthDay,
+.flatpickr-day.selected.nextMonthDay,
+.flatpickr-day.startRange.nextMonthDay,
+.flatpickr-day.endRange.nextMonthDay {
+  background: #18A0FB;
+  border-color: #18A0FB;
+}
+
+.flatpickr-day.inRange,
+.flatpickr-day.prevMonthDay.inRange,
+.flatpickr-day.nextMonthDay.inRange,
+.flatpickr-day.today.inRange,
+.flatpickr-day.prevMonthDay.today.inRange,
+.flatpickr-day.nextMonthDay.today.inRange,
+.flatpickr-day:hover,
+.flatpickr-day.prevMonthDay:hover,
+.flatpickr-day.nextMonthDay:hover,
+.flatpickr-day:focus,
+.flatpickr-day.prevMonthDay:focus,
+.flatpickr-day.nextMonthDay:focus {
+  background: #e7f5ff;
+  border-color: #e7f5ff;
+}
+
+.flatpickr-day.inRange {
+  border-radius: 0;
+  -webkit-box-shadow: -5px 0 0 #e7f5ff, 5px 0 0 #e7f5ff;
+  box-shadow: -5px 0 0 #e7f5ff, 5px 0 0 #e7f5ff;
+}
+
+/* media */
+@media screen and (max-width: 900px) {
+  .form__vertical {
+    right: -150px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+
+  .forms {
+    margin: 0;
+  }
+  #section-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .tabs__group {
+    flex-direction: column;
+  }
+
+  .form__vertical {
+    display: none;
+  }
+
+  table {
+    overflow: scroll;
+    display: block;
+  }
+
+  td, th {
+    width: 50%;
+  }
+
+  
 }
